2008-03-03  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5818]
	* nscd/connections.c (dbs): Add initializers for .suggested_module.
	(verify_persistent_db): Remove one unnecessary test and add a new one
	for bad configuration.
	(nscd_init): Improve error reported when persistent database cannot
	be reused.
	* nscd/nscd.h (DEFAULT_SUGGESTED_MODULE): Define.
	* nscd/nscd_conf.c (nscd_parse_file): Provide default values for
	.suggested_module and .max_db_size and case config file says the
	values are zero.
	* nscd/nscd_helper.c (get_mapping): Fail if hash table module is zero.

	[BZ #5854]
	* nis/ypclnt.c (yp_order): Fix handling of return value of
	do_ypcall_tr call.
	Patch by Jeff Moyer <jmoyer@redhat.com>.

	* po/fr.po: Update from translation team.

2008-02-22  Andreas Jaeger  <aj@suse.de>,
	    Carlos O'Donell <carlos@systemhalted.org>

	[BZ #5012]
	* FAQ.in: Describe why glibc needs to be compiled with
	optimization.

2008-02-19  Roland McGrath  <roland@redhat.com>

	* elf/elf.h (SHT_GNU_ATTRIBUTES): New macro.

2008-02-15  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5737]
	* resolv/netdb.h: Make NI_MAXHOST and NI_MAXSERV available when
	__USE_MISC is defined.

2008-02-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sys/timerfd.h: New file.
	* sysdeps/unix/sysv/linux/Makefile [subdir=misc] (sysdep_headers): Add
	sys/timerfd.h.
	* sysdeps/unix/sysv/linux/syscalls.list: Add timerfd_create,
	timerfd_gettime, timerfd_settime.
	* sysdeps/unix/sysv/linux/Versions: Add timerfd_create,
	timerfd_gettime, timerfd_settime for GLIBC_2.8.

2008-02-08  Roland McGrath  <roland@redhat.com>

	* elf/elf.h (NT_PPC_SPE): New macro.

2008-02-06  Roland McGrath  <roland@redhat.com>

	* Makerules ($(common-objpfx)sysd-rules):
	Depend on $(sysdep-makeconfigs).

2008-01-31  Roland McGrath  <roland@redhat.com>

	[BZ #5442]
	* configure.in: Use -print-file-name if it yields a directory,
	for each of include and include-fixed.
	* configure: Regenerated.
