@@ -1,3 +1,10 @@
+2008-02-25  Jakub Jelinek  <jakub@redhat.com>
+
+	[BZ #5790]
+	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyaddr2_r): Don't
+	overwrite *h_errnop/*errnop values from getanswer_r in case of
+	failure.
+
 2008-03-03  Ulrich Drepper  <drepper@redhat.com>
 
 	[BZ #5818]
